[MODORDER-1087] change the piecesCollection to list. Raml file modifciation