@@ -1,12 +1,11 @@
 package org.folio.service.pieces.flows.delete;
 
 import static org.folio.orders.utils.ProtectedOperationType.DELETE;
-import static org.folio.service.orders.utils.HelperUtils.collectResultsOnSuccess;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
-import org.apache.commons.collections4.CollectionUtils;
+import io.vertx.core.CompositeFuture;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.folio.models.pieces.PieceDeletionHolder;
@@ -18,7 +17,6 @@ import org.folio.service.CirculationRequestsRetriever;
 import org.folio.service.ProtectionService;
 import org.folio.service.pieces.PieceStorageService;
 import org.folio.service.pieces.flows.BasePieceFlowHolderBuilder;
-import org.folio.rest.jaxrs.model.PieceCollection;
 
 import io.vertx.core.Future;
 
@@ -85,26 +83,13 @@ public class PieceDeleteFlowManager {
       : pieceDeleteFlowPoLineService.updatePoLine(holder, requestContext);
   }
 
-  public Future<List<Void>> batchDeletePiece (PieceCollection entity, RequestContext requestContext) {
-    List <String> ids = new ArrayList<>();
-    entity.getPieces().stream().forEach(v -> ids.add(v.getId()));
-    List<Future<PieceDeletionHolder>> deletionHolders = ids.stream()
-      .map(pieceId -> {
-        PieceDeletionHolder holder = new PieceDeletionHolder().withDeleteHolding(true);
-        return pieceStorageService.getPieceById(pieceId, requestContext)
-          .map(pieceToDelete -> {
-            holder.withPieceToDelete(pieceToDelete);
-            return holder;
-          });
-      })
-      .toList();
-    return collectResultsOnSuccess(deletionHolders)
-      .compose(holders -> {
-        List<Future<Void>> deleteFutures = holders.stream()
-          .map(holder -> pieceStorageService.deletePiece(holder.getPieceToDelete().getId(), true, requestContext))
-          .toList();
-        return collectResultsOnSuccess(deleteFutures);
-      });
+  public Future<List<Void>> batchDeletePiece (List <String> ids, boolean deleteHolding ,RequestContext requestContext) {
+    List<Future> deleteFutures = ids.stream()
+      .map(id -> deletePiece(id, deleteHolding, requestContext))
+      .collect(Collectors.toList());
+
+    return CompositeFuture.all(deleteFutures)
+      .map(empty -> null);
   }
 
 }
